WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314695
[WebKitTestRunner] crash logs of ServiceWorkerProcess fails to symbolize for Linux
https://bugs.webkit.org/show_bug.cgi?id=314695
Summary
[WebKitTestRunner] crash logs of ServiceWorkerProcess fails to symbolize for ...
Fujii Hironori
Reported
2026-05-12 18:41:32 PDT
[WebKitTestRunner] crash logs of ServiceWorkerProcess fails to symbolize for Linux The crash log of
bug#314690 comment#1
contains
> Core was generated by `/sdk/webkit/WebKitBuild/GTK/Debug/bin/WebKitWebProcess 84 21 --configure-jsc-fo'.
(...)
> Thread 1 (LWP 2191054): > #0 0x00007fbd04baaf1e in ?? () > #1 0x00007fbc959f87b0 in ?? ()
(...)
> STDERR: /sdk/webkit/WebKitBuild/GTK/Debug/bin/ServiceWorkerProcess: No such file or directory.
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2026-05-12 18:55:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64807
EWS
Comment 2
2026-05-12 22:22:37 PDT
Committed
313132@main
(44d4f224dc50): <
https://commits.webkit.org/313132@main
> Reviewed commits have been landed. Closing PR #64807 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-05-12 22:23:12 PDT
<
rdar://problem/176948520
>
Mike Wyrzykowski
Comment 4
2026-05-12 23:41:26 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/63735
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug