[WebKitTestRunner] Add TestController::serviceWorkerProcessName() https://bugs.webkit.org/show_bug.cgi?id=314695

Reviewed by Claudio Saavedra.

Crash logs of ServiceWorkerProcess failed to symbolize functions for GTK and
WPE because gdb couldn't find an executable named "ServiceWorkerProcess".
WebKitTestRunner has to output the correct executable name for it if the
service worker process is crashed.

Fixed GPU process too which had the same issue.

* Tools/WebKitTestRunner/TestController.cpp:
(WTR::TestController::gpuProcessName):
(WTR::TestController::serviceWorkerProcessName):
* Tools/WebKitTestRunner/TestController.h:

Canonical link: https://commits.webkit.org/313132@main